# DanielDuP

./: .gitignore  README.md  main.py  pyproject.toml
danieldup/: render_currently_reading.py  render_proportional_languages.py
danieldup/renderers/: render_utils.py
danieldup/renderers/charts/: repo_area_proportion.py  repo_language_proportion.py
danieldup/renderers/charts/chart_types/: stack_plot.py
danieldup/renderers/graphics/: currently_reading_image.py
danieldup/schemas/: Book.py  Repo.py
danieldup/sources/: currently_reading.py  repos.py
